// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Watermark The offset should be correct 1`] = `
<div>
  <div
    class="watermark"
    style="position: relative;"
  >
    <div
      style="z-index: 9; position: absolute; left: 150px; top: 150px; width: calc(100% - 150px); height: calc(100% - 150px); pointer-events: none; background-repeat: repeat; background-position: 0px 0px; background-image: url('data:image/png;base64,00'); background-size: 236px;"
    />
  </div>
</div>
`;

exports[`Watermark The watermark should render successfully 1`] = `
<div>
  <div
    class="watermark"
    style="position: relative;"
  >
    <div
      style="z-index: 9; position: absolute; left: 0; top: 0; width: 100%; height: 100%; pointer-events: none; background-repeat: repeat; background-position: 0px 0px; background-image: url('data:image/png;base64,00'); background-size: 228px;"
    />
  </div>
</div>
`;
